--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇫🇷 法国-1.86MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-430.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林), server: us1.nodegz.top, port: 1400, type: trojan, password: fc578146-8cfb-3c32-97e0-67621c90b130, sni: us1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.28MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.08MB/s(Youtube:不良林), server: cm01.db-link.in, port: 13302, type: vmess, uuid: c4fa06ca-c18f-37a4-ba0e-63537c0fb672, alterId: 1, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /db, ws-headers: {Host: cm01.db-link.in}}
+  - {name: 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-168.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-566.7KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
   - {name: 🇺🇸 美国-3.11MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.14MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-569.8KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-715.6KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-430.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-168.3KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-566.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.11MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
