--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.28MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-3.53MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-3.18MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.41MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-1.34MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-569.8KB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇺🇸 美国-2.63MB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
-  - {name: 🇺🇸 美国-439.3KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.31MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-1.04MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇺🇸 美国-3.82MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-3.09MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-1003.6KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.28MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.18MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.41MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.34MB/s(Youtube:不良林)
-      - 🇨🇳 中国-569.8KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.63MB/s(Youtube:不良林)
-      - 🇺🇸 美国-439.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.04MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.09MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1003.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
